aura: changes when WindowPort::OnDidChangeTransform() is called

This calls it from OnLayerTransform(). That way, if the transform is
changed outside of Window::SetTransform, everything still works.

BUG=822917
TEST=covered by tests

Change-Id: I27acb266c4a4993df0a71457af8aa3b4c2cde5d1
Reviewed-on: https://chromium-review.googlesource.com/967841
Reviewed-by: Sadrul Chowdhury <sadrul@chromium.org>
Commit-Queue: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#543974}
Former-commit-id: ac1a8082c1005516e3edd47f1a79af626ecf9152